SERVER-63257 Convert NamespaceNotFound error on config.system.indexBuilds to an anonymous error